--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,8 @@
         $('a[aria-expanded=true]').attr('aria-expanded', 'false');
       });
 
-      $('#body').on('click', () => {
+      $('#body').on('click', (e) => {
+        console.log('event ', e);
         if ($('#sidebar')[0].classList.contains('active')) {
           $('#sidebar').toggleClass('active');
         }
